Regression (291871) : Speedometer3 | All devices | .6% Sp3, 1% TodoMVC-JavaScript-ES6-Webpack-Complex-DOM https://bugs.webkit.org/show_bug.cgi?id=290141 rdar://147585376

Reviewed by NOBODY (OOPS!).

Partial revert of c652c23c52e249db4208beb501ce900a24fe0502, just reverting the text-decoration, fill and stroke properties.

* LayoutTests/editing/execCommand/toggle-text-decorations-expected.txt:
* LayoutTests/editing/execCommand/toggle-text-decorations.html:
* LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering-expected.txt:
* LayoutTests/fast/css3-text/css3-text-decoration/getComputedStyle/getComputedStyle-text-decoration-shorthand-ordering.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/parsing/text-decoration-line-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/editing/run/strikethrough_2001-last-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/editing/run/underline_2001-last-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/editing/run/strikethrough_2001-last-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/editing/run/underline_2001-last-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+SVG.cpp:
(WebCore::CSSPropertyParserHelpers::consumePaint):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+SVG.h:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+TextDecoration.cpp:
(WebCore::CSSPropertyParserHelpers::consumeTextDecorationLine):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+TextDecoration.h: