Source/WebCore/css/parser/CSSPropertyParser.cpp
@@ -1022,7 +1022,7 @@ bool CSSPropertyParser::consumeFontSynthesisShorthand(CSS::PropertyParserState& 
 
 bool CSSPropertyParser::consumeTextDecorationShorthand(CSS::PropertyParserState& state)
 {
-    auto line = CSSPropertyParsing::consumeTextDecorationLine(m_range);
+    auto line = consumeTextDecorationLine(m_range, state);
     if (!line || !m_range.atEnd())
         return false;
     addPropertyForCurrentShorthand(state, CSSPropertyTextDecorationLine, line.releaseNonNull());
